fix: about boxes spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -5,7 +5,6 @@
 }
 
 .about ul {
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +17,7 @@
 .about label {
     display: flex;
     align-items: center;
+    justify-content: center;
     column-gap: 1rem;
     white-space: nowrap;
     border-radius: 6px 6px 0px 0px;
@@ -63,22 +63,6 @@
     background-color: lightgray;
 }
 
-.about li:nth-child(1) input[type="checkbox"]:checked + label{
-    margin-bottom: 13rem;
-}
-
-.about li:nth-child(2) input[type="checkbox"]:checked + label{
-    margin-bottom: 12rem;
-}
-
-.about li:nth-child(3) input[type="checkbox"]:checked + label{
-    margin-bottom: 12rem;
-}
-
-.about li:nth-child(4) input[type="checkbox"]:checked + label{
-    margin-bottom: 12rem;
-}
-
 .about label:hover {
     background: lightgrey;
     cursor: pointer;
@@ -104,3 +88,20 @@
 .about li:nth-child(4) {
     margin-left: 30rem;
 }
+
+.about li:nth-child(1) input[type="checkbox"]:checked + label{
+    margin-bottom: 13rem;
+}
+
+.about li:nth-child(2) input[type="checkbox"]:checked + label{
+    margin-bottom: 11rem;
+}
+
+.about li:nth-child(3) input[type="checkbox"]:checked + label{
+    margin-bottom: 16rem;
+}
+
+.about li:nth-child(4) input[type="checkbox"]:checked + label{
+    margin-bottom: 12rem;
+}
+
